# tgadmin

./: .env.example  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
bot/: __init__.py  __main__.py  config.py  sql_function.py
bot/db/: db.py  models.py
bot/filters/: filtersbot.py
bot/handlers/: __init__.py  admin.py  user.py
bot/markups/: adminmarkup.py  markup.py
bot/middlewares/: __init__.py  check_ban.py  create_user.py  edit_callback.py  throttling.py
bot/states/: adminstates.py  states.py
files/: postgresql.conf
nginx/: nginx.conf
webadmin/: __main__.py  config.py  exc.py  function.py  key.py  models.py  schemas.py
webadmin/db/: crud.py  db.py  models.py
webadmin/routers/: __init__.py  auth_router.py  otdels_router.py  user_router.py
webadmin/static/: scripts.js  styles.css  time.js  users.css  users.js
webadmin/static/css/: common.css  modal.css  otdels.css  questions.css  styles.css  users.css
webadmin/static/js/: otdels.js  questions.js  users.js
webadmin/templates/: base.html  index.html  login.html  otdels.html  pagination.html  profile.html  questions.html  register.html  users.html
webadmin/uploads/: 123_5e327b983b3a4613b754daee7a82861e.docx  bot_d0dbea5b90474c4981a769657d6339f1.service
